docs/upbound-provider-aws/1.6/cloudfront/v1beta1/fieldLevelEncryptionProfile.md
---
permalink: /upbound-provider-aws/1.6/cloudfront/v1beta1/fieldLevelEncryptionProfile/
---

# cloudfront.v1beta1.fieldLevelEncryptionProfile

"FieldLevelEncryptionProfile is the Schema for the FieldLevelEncryptionProfiles API. Provides a CloudFront Field-level Encryption Profile resource."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withComment(comment)`](#fn-specforproviderwithcomment)
    * [`fn withEncryptionEntities(encryptionEntities)`](#fn-specforproviderwithencryptionentities)
    * [`fn withEncryptionEntitiesMixin(encryptionEntities)`](#fn-specforproviderwithencryptionentitiesmixin)
    * [`fn withName(name)`](#fn-specforproviderwithname)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`obj spec.forProvider.encryptionEntities`](#obj-specforproviderencryptionentities)
      * [`fn withItems(items)`](#fn-specforproviderencryptionentitieswithitems)
      * [`fn withItemsMixin(items)`](#fn-specforproviderencryptionentitieswithitemsmixin)
      * [`obj spec.forProvider.encryptionEntities.items`](#obj-specforproviderencryptionentitiesitems)
        * [`fn withFieldPatterns(fieldPatterns)`](#fn-specforproviderencryptionentitiesitemswithfieldpatterns)
        * [`fn withFieldPatternsMixin(fieldPatterns)`](#fn-specforproviderencryptionentitiesitemswithfieldpatternsmixin)
        * [`fn withProviderId(providerId)`](#fn-specforproviderencryptionentitiesitemswithproviderid)
        * [`fn withPublicKeyId(publicKeyId)`](#fn-specforproviderencryptionentitiesitemswithpublickeyid)
        * [`obj spec.forProvider.encryptionEntities.items.fieldPatterns`](#obj-specforproviderencryptionentitiesitemsfieldpatterns)
          * [`fn withItems(items)`](#fn-specforproviderencryptionentitiesitemsfieldpatternswithitems)
          * [`fn withItemsMixin(items)`](#fn-specforproviderencryptionentitiesitemsfieldpatternswithitemsmixin)
        * [`obj spec.forProvider.encryptionEntities.items.publicKeyIdRef`](#obj-specforproviderencryptionentitiesitemspublickeyidref)
          * [`fn withName(name)`](#fn-specforproviderencryptionentitiesitemspublickeyidrefwithname)
          * [`obj spec.forProvider.encryptionEntities.items.publicKeyIdRef.policy`](#obj-specforproviderencryptionentitiesitemspublickeyidrefpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderencryptionentitiesitemspublickeyidrefpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderencryptionentitiesitemspublickeyidrefpolicywithresolve)
        * [`obj spec.forProvider.encryptionEntities.items.publicKeyIdSelector`](#obj-specforproviderencryptionentitiesitemspublickeyidselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderencryptionentitiesitemspublickeyidselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderencryptionentitiesitemspublickeyidselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderencryptionentitiesitemspublickeyidselectorwithmatchlabelsmixin)
          * [`obj spec.forProvider.encryptionEntities.items.publicKeyIdSelector.policy`](#obj-specforproviderencryptionentitiesitemspublickeyidselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderencryptionentitiesitemspublickeyidselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderencryptionentitiesitemspublickeyidselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withComment(comment)`](#fn-specinitproviderwithcomment)
    * [`fn withEncryptionEntities(encryptionEntities)`](#fn-specinitproviderwithencryptionentities)
    * [`fn withEncryptionEntitiesMixin(encryptionEntities)`](#fn-specinitproviderwithencryptionentitiesmixin)
    * [`fn withName(name)`](#fn-specinitproviderwithname)
    * [`obj spec.initProvider.encryptionEntities`](#obj-specinitproviderencryptionentities)
      * [`fn withItems(items)`](#fn-specinitproviderencryptionentitieswithitems)
      * [`fn withItemsMixin(items)`](#fn-specinitproviderencryptionentitieswithitemsmixin)
      * [`obj spec.initProvider.encryptionEntities.items`](#obj-specinitproviderencryptionentitiesitems)
        * [`fn withFieldPatterns(fieldPatterns)`](#fn-specinitproviderencryptionentitiesitemswithfieldpatterns)
        * [`fn withFieldPatternsMixin(fieldPatterns)`](#fn-specinitproviderencryptionentitiesitemswithfieldpatternsmixin)
        * [`fn withProviderId(providerId)`](#fn-specinitproviderencryptionentitiesitemswithproviderid)
        * [`fn withPublicKeyId(publicKeyId)`](#fn-specinitproviderencryptionentitiesitemswithpublickeyid)
        * [`obj spec.initProvider.encryptionEntities.items.fieldPatterns`](#obj-specinitproviderencryptionentitiesitemsfieldpatterns)
          * [`fn withItems(items)`](#fn-specinitproviderencryptionentitiesitemsfieldpatternswithitems)
          * [`fn withItemsMixin(items)`](#fn-specinitproviderencryptionentitiesitemsfieldpatternswithitemsmixin)
        * [`obj spec.initProvider.encryptionEntities.items.publicKeyIdRef`](#obj-specinitproviderencryptionentitiesitemspublickeyidref)
          * [`fn withName(name)`](#fn-specinitproviderencryptionentitiesitemspublickeyidrefwithname)
          * [`obj spec.initProvider.encryptionEntities.items.publicKeyIdRef.policy`](#obj-specinitproviderencryptionentitiesitemspublickeyidrefpolicy)
            * [`fn withResolution(resolution)`](#fn-specinitproviderencryptionentitiesitemspublickeyidrefpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specinitproviderencryptionentitiesitemspublickeyidrefpolicywithresolve)
        * [`obj spec.initProvider.encryptionEntities.items.publicKeyIdSelector`](#obj-specinitproviderencryptionentitiesitemspublickeyidselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderencryptionentitiesitemspublickeyidselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderencryptionentitiesitemspublickeyidselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderencryptionentitiesitemspublickeyidselectorwithmatchlabelsmixin)
          * [`obj spec.initProvider.encryptionEntities.items.publicKeyIdSelector.policy`](#obj-specinitproviderencryptionentitiesitemspublickeyidselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specinitproviderencryptionentitiesitemspublickeyidselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specinitproviderencryptionentitiesitemspublickeyidselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of FieldLevelEncryptionProfile

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"FieldLevelEncryptionProfileSpec defines the desired state of FieldLevelEncryptionProfile"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withComment

```ts
withComment(comment)
```

"An optional comment about the Field Level Encryption Profile."

### fn spec.forProvider.withEncryptionEntities

```ts
withEncryptionEntities(encryptionEntities)
```

"The encryption entities config block for field-level encryption profiles that contains an attribute items which includes the encryption key and field pattern specifications."

### fn spec.forProvider.withEncryptionEntitiesMixin

```ts
withEncryptionEntitiesMixin(encryptionEntities)
```

"The encryption entities config block for field-level encryption profiles that contains an attribute items which includes the encryption key and field pattern specifications."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withName

```ts
withName(name)
```

"The name of the Field Level Encryption Profile."

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"Region is the region you'd like your resource to be created in."

## obj spec.forProvider.encryptionEntities

"The encryption entities config block for field-level encryption profiles that contains an attribute items which includes the encryption key and field pattern specifications."

### fn spec.forProvider.encryptionEntities.withItems

```ts
withItems(items)
```



### fn spec.forProvider.encryptionEntities.withItemsMixin

```ts
withItemsMixin(items)
```



**Note:** This function appends passed data to existing values

## obj spec.forProvider.encryptionEntities.items



### fn spec.forProvider.encryptionEntities.items.withFieldPatterns

```ts
withFieldPatterns(fieldPatterns)
```

"Object that contains an attribute items that contains the list of field patterns in a field-level encryption content type profile specify the fields that you want to be encrypted."

### fn spec.forProvider.encryptionEntities.items.withFieldPatternsMixin

```ts
withFieldPatternsMixin(fieldPatterns)
```

"Object that contains an attribute items that contains the list of field patterns in a field-level encryption content type profile specify the fields that you want to be encrypted."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.encryptionEntities.items.withProviderId

```ts
withProviderId(providerId)
```

"The provider associated with the public key being used for encryption."

### fn spec.forProvider.encryptionEntities.items.withPublicKeyId

```ts
withPublicKeyId(publicKeyId)
```

"The public key associated with a set of field-level encryption patterns, to be used when encrypting the fields that match the patterns."

## obj spec.forProvider.encryptionEntities.items.fieldPatterns

"Object that contains an attribute items that contains the list of field patterns in a field-level encryption content type profile specify the fields that you want to be encrypted."

### fn spec.forProvider.encryptionEntities.items.fieldPatterns.withItems

```ts
withItems(items)
```



### fn spec.forProvider.encryptionEntities.items.fieldPatterns.withItemsMixin

```ts
withItemsMixin(items)
```



**Note:** This function appends passed data to existing values

## obj spec.forProvider.encryptionEntities.items.publicKeyIdRef

"Reference to a PublicKey in cloudfront to populate publicKeyId."

### fn spec.forProvider.encryptionEntities.items.publicKeyIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.encryptionEntities.items.publicKeyIdRef.policy

"Policies for referencing."

### fn spec.forProvider.encryptionEntities.items.publicKeyIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.encryptionEntities.items.publicKeyIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.encryptionEntities.items.publicKeyIdSelector

"Selector for a PublicKey in cloudfront to populate publicKeyId."

### fn spec.forProvider.encryptionEntities.items.publicKeyIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.encryptionEntities.items.publicKeyIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.encryptionEntities.items.publicKeyIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.encryptionEntities.items.publicKeyIdSelector.policy

"Policies for selection."

### fn spec.forProvider.encryptionEntities.items.publicKeyIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.encryptionEntities.items.publicKeyIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withComment

```ts
withComment(comment)
```

"An optional comment about the Field Level Encryption Profile."

### fn spec.initProvider.withEncryptionEntities

```ts
withEncryptionEntities(encryptionEntities)
```

"The encryption entities config block for field-level encryption profiles that contains an attribute items which includes the encryption key and field pattern specifications."

### fn spec.initProvider.withEncryptionEntitiesMixin

```ts
withEncryptionEntitiesMixin(encryptionEntities)
```

"The encryption entities config block for field-level encryption profiles that contains an attribute items which includes the encryption key and field pattern specifications."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withName

```ts
withName(name)
```

"The name of the Field Level Encryption Profile."

## obj spec.initProvider.encryptionEntities

"The encryption entities config block for field-level encryption profiles that contains an attribute items which includes the encryption key and field pattern specifications."

### fn spec.initProvider.encryptionEntities.withItems

```ts
withItems(items)
```



### fn spec.initProvider.encryptionEntities.withItemsMixin

```ts
withItemsMixin(items)
```



**Note:** This function appends passed data to existing values

## obj spec.initProvider.encryptionEntities.items



### fn spec.initProvider.encryptionEntities.items.withFieldPatterns

```ts
withFieldPatterns(fieldPatterns)
```

"Object that contains an attribute items that contains the list of field patterns in a field-level encryption content type profile specify the fields that you want to be encrypted."

### fn spec.initProvider.encryptionEntities.items.withFieldPatternsMixin

```ts
withFieldPatternsMixin(fieldPatterns)
```

"Object that contains an attribute items that contains the list of field patterns in a field-level encryption content type profile specify the fields that you want to be encrypted."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.encryptionEntities.items.withProviderId

```ts
withProviderId(providerId)
```

"The provider associated with the public key being used for encryption."

### fn spec.initProvider.encryptionEntities.items.withPublicKeyId

```ts
withPublicKeyId(publicKeyId)
```

"The public key associated with a set of field-level encryption patterns, to be used when encrypting the fields that match the patterns."

## obj spec.initProvider.encryptionEntities.items.fieldPatterns

"Object that contains an attribute items that contains the list of field patterns in a field-level encryption content type profile specify the fields that you want to be encrypted."

### fn spec.initProvider.encryptionEntities.items.fieldPatterns.withItems

```ts
withItems(items)
```



### fn spec.initProvider.encryptionEntities.items.fieldPatterns.withItemsMixin

```ts
withItemsMixin(items)
```



**Note:** This function appends passed data to existing values

## obj spec.initProvider.encryptionEntities.items.publicKeyIdRef

"Reference to a PublicKey in cloudfront to populate publicKeyId."

### fn spec.initProvider.encryptionEntities.items.publicKeyIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.encryptionEntities.items.publicKeyIdRef.policy

"Policies for referencing."

### fn spec.initProvider.encryptionEntities.items.publicKeyIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.encryptionEntities.items.publicKeyIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.encryptionEntities.items.publicKeyIdSelector

"Selector for a PublicKey in cloudfront to populate publicKeyId."

### fn spec.initProvider.encryptionEntities.items.publicKeyIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.encryptionEntities.items.publicKeyIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.encryptionEntities.items.publicKeyIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.encryptionEntities.items.publicKeyIdSelector.policy

"Policies for selection."

### fn spec.initProvider.encryptionEntities.items.publicKeyIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.encryptionEntities.items.publicKeyIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."